fixed header not aligned w. contents colums

--- a/src/app/products-cart/products-cart.component.scss
+++ b/src/app/products-cart/products-cart.component.scss
@@ -73,22 +73,8 @@
     justify-self: end;
 }
 
-.products-cart-grid-checkout {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 200px;
-    grid-template-areas: "checkout";
-    margin: 1rem;
-    padding: 0.5rem; 
-    background-color: white;
-}
-
-.products-cart-grid-checkout-checkout {
-    grid-area: checkout;
-}
-
 mat-form-field {
-    width: 150px; 
+    width: 50px; 
     text-align: center;
 }
 
